# devoleum-rust-platform-zirael

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  migrations.json  nx.json  package.json  static.json  workspace.json
apps/backend/: .env  Cargo.toml  project.json
apps/backend/src/: main.rs
apps/webapp/: project.json  proxy.conf.json  tsconfig.json
apps/webapp/.storybook/: main.js  tsconfig.json
apps/webapp/src/: main.tsx  styles.scss
devoleum/: package-lock.json  package.json
devoleum/apps/webapp/: project.json
fakedump/: users.json
frontend/: nx.json  package-lock.json  package.json
frontend/apps/webapp/: project.json
frontend/public/: index.html
frontend/src/: App.js  index.css  store.js
frontend/src/actions/: historyActions.js  productActions.js  stepActions.js  userActions.js
frontend/src/components/: Achievement.js  Contacts.js  Footer.js  FormContainer.js  Header.js  ItemInfo.js  Meta.js  Product.js  ProductCarousel.js
frontend/src/constants/: historyConstants.js  stepConstants.js  userConstants.js
frontend/src/reducers/: historyReducers.js  stepReducers.js  userReducers.js
frontend/src/screens/: EarlyRegister.js  HistoryEditScreen.js  HistoryListScreen.js  HistoryScreen.js  HomeScreen.js  LoginScreen.js  MerchantScreen.js  PaymentScreen.js  PlaceOrderScreen.js  Privacy.js  ProfileScreen.js  StepScreen.js  (+2 more)
rustbk/: Cargo.toml
src/: controller.rs  main.rs  service.rs
src/api/: histories.rs  mod.rs  steps.rs  users.rs
src/config/: config.rs
src/middlewares/: auth.rs
src/models/: histories.rs  mod.rs  response.rs  steps.rs  users.rs
(+160 files in other folders)
