[package]
name = "devoleum-rust-platform-zirael"
version = "0.1.0"
authors = ["Lorenzo Zaccagnini <devoleum@tutanota.com>, Elisa Romondia <devoleum@tutanota.com>"]
edition = "2018"
license = "MIT"

[dependencies]
actix-web = "4"
mongodb = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
bson = "2.1.0"
actix-files = "0.6.0"
futures-util = "0.3.21"
actix-cors = "0.6.1"
dotenv = "0.15.0"
jsonwebtoken = "8.0.1"
envfile = "0.2.1"
chrono = "0.4.19"
blake2 = "0.10.4"
hex-literal = "0.3.4"